--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
         
     </main>
     <footer>
-        Strona w przyszłości może zostać zaktualizowana | <br>| 03.08.2024 zmcpl.github.io | <br>| Proszę o niepodpierdalanie kodu źródłowego JS, HTML, CSS Dziękuje <3 |
+        Strona w przyszłości może zostać zaktualizowana | <br>| 03.08.2024 ziorbek.github.io | <br>| Proszę o niepodpierdalanie kodu źródłowego JS, HTML, CSS Dziękuje <3 |
     </footer>
     <script>
         function formatCurrency(value) {
