--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:image" content="https://ziorbek.github.io/linkpromocyjny.png" />
+    <meta property="og:title" content="ziorbek.github.io | Kalkulator wynagrodzeń netto brutto oraz wyliczeń dni roboczych" />
     <title>Brutto / Netto</title>
     <style>
         body {
