--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta property="og:title" content="ziorbek.github.io | Kalkulator wynagrodzeń netto brutto oraz wyliczeń dni roboczych" />
     <meta property="og:description" content="Ciekawi cię ile zarobisz w pracy, ile dni przepracujesz... NIC NIE SZKODZI. Gdyż mój projekt dokładnie obliczy twój zarobek jak i pomoże ci wyliczyć ilość dni spędzonych w pracy!" />
     <meta property="og:url" content="https://ziorbek.github.io" />
+    <meta property="og:image" content="https://ziorbek.github.io/linkpromocyjny.png" />
     <title>Brutto / Netto</title>
     <style>
         body {
