--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
+    <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="ziorbek.github.io | Kalkulator wynagrodzeń netto brutto oraz wyliczeń dni roboczych" />
     <meta property="og:description" content="Ciekawi cię ile zarobisz w pracy, ile dni przepracujesz... NIC NIE SZKODZI. Gdyż mój projekt dokładnie obliczy twój zarobek jak i pomoże ci wyliczyć ilość dni spędzonych w pracy!" />
     <meta property="og:url" content="https://ziorbek.github.io" />
     <meta property="og:image" content="https://ziorbek.github.io/linkpromocyjny.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:type" content="website" />
+    <!-- Opcjonalne fb:app_id, usuń jeśli nie masz aplikacji na Facebooku -->
+    <!-- <meta property="fb:app_id" content="YOUR_APP_ID" /> -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="ziorbek.github.io | Kalkulator wynagrodzeń netto brutto oraz wyliczeń dni roboczych">
+    <meta name="twitter:description" content="Ciekawi cię ile zarobisz w pracy, ile dni przepracujesz... NIC NIE SZKODZI. Gdyż mój projekt dokładnie obliczy twój zarobek jak i pomoże ci wyliczyć ilość dni spędzonych w pracy!">
+    <meta name="twitter:image" content="https://ziorbek.github.io/linkpromocyjny.png">
     <title>Brutto / Netto</title>
     <style>
         body {
